Fix text and align of question selector in inline question editor popup. Fix align of field names in SA question tab for inline question editor popup. 	Change on 2015/10/23 by jorr <jorr@google.com> ------------- Created by MOE: https://github.com/google/moe MOE_MIGRATED_REVID=106160255

--- a/coursebuilder/modules/assessment_tags/templates/questions_popup.css
+++ b/coursebuilder/modules/assessment_tags/templates/questions_popup.css
@@ -11,12 +11,14 @@ form#cb-oeditor-form > fieldset {
 #cb-oeditor-form > fieldset,
 #cb-oeditor-form .mc-container > fieldset,
 #cb-oeditor-form .sa-container > fieldset,
+#cb-oeditor-form .select-container > fieldset,
 #cb-oeditor-form > fieldset > .inputEx-Group:last-child > fieldset {
   border-top: none;
 }
 #cb-oeditor-form > fieldset > .inputEx-Group-legend,
 #cb-oeditor-form .mc-container > fieldset > .inputEx-Group-legend,
 #cb-oeditor-form .sa-container > fieldset > .inputEx-Group-legend,
+#cb-oeditor-form .select-container > fieldset > .inputEx-Group-legend,
 #cb-oeditor-form > fieldset > .inputEx-Group:last-child > fieldset > .inputEx-Group-legend {
   display: none;
 }
@@ -27,11 +29,15 @@ form#cb-oeditor-form > fieldset {
   margin-top: 50px;
 }
 
+#cb-oeditor-form .sa-container .inputEx-label,
+#cb-oeditor-form .select-container .inputEx-label,
 #cb-oeditor-form > fieldset > .inputEx-Group:last-child > fieldset .inputEx-label {
   width: inherit;
 }
+.select-container .inputEx-Field,
 .question-weight {
   margin-left: 87px;
+  float: none;
 }
 .question-weight input {
   width: 546px;
